--- a/analyze_failures.ipynb
+++ b/analyze_failures.ipynb
@@ -18,7 +18,6 @@
    ],
    "source": [
     "import polars as pl\n",
-    "from pathlib import Path\n",
     "from providers.config import settings\n",
     "import webbrowser\n",
     "import random\n",
@@ -158,7 +157,7 @@
     "print(random_filename[\"claude-3-5-sonnet-latest\"])\n",
     "open_output_file(random_filename[\"filename\"], \"gpt-4o-mini\")\n",
     "open_ground_truth_file(random_filename[\"filename\"])\n",
-    "open_source_file(random_filename[\"filename\"])\n"
+    "open_source_file(random_filename[\"filename\"])"
    ]
   }
  ],
